# hacktcnj2024-docker-example

./: .dockerignore  README.md  pyproject.toml
python-django/: manage.py
python-django/docker/: Dockerfile  docker-compose_EXAMPLE.yml  entrypoint.sh
python-django/hacktcnj2024/: asgi.py  settings.py  urls.py  wsgi.py
